SERVER-119435 Fix deadlock with range deletion task registration (#47940)

GitOrigin-RevId: fda2476aa1b758ba6700e10c1bea625e6add0da1